--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -11,7 +11,7 @@ body
     min-height: 250px
 
 a
-    color: $blue 
+    color: $blue
     text-decoration: none
 
 h2
@@ -19,7 +19,7 @@ h2
     color: rgba(0,0,0,0.54)
 h4
     margin: 0
-    color: $grey 
+    color: $grey
 
 ul li
     list-style-type: none
@@ -58,49 +58,49 @@ nav
         border-left-color: $darkblue
         color: $black
 
-.toggle_menu 
+.toggle_menu
     position: absolute
     right: 0
     top: 0
 
-.picbox:after 
+.picbox:after
     font-family: FontAwesome
     position: absolute
     color: $grey
     right: 10px
     top: 28px
-.picbox.md-input-focused:after 
+.picbox.md-input-focused:after
     color: $red
-.searchbox:after 
+.searchbox:after
     content: "\f002"
     color: $lightgrey
-.urlbox:after 
+.urlbox:after
     content: "\f0c1"
-.firstnamebox:after 
+.firstnamebox:after
     content: "\f007"
-.realnamebox:after 
+.realnamebox:after
     content: "\f007"
-.emailbox:after 
+.emailbox:after
     content: "\f003"
-.subjectbox:after 
+.subjectbox:after
     content: "\f040"
-.messagebox:after 
+.messagebox:after
     content: "\f0e5"
 
-.pill 
+.pill
     border-radius: 5px
     padding: 2px 4px
     margin-right: 5px
     cursor: pointer
 
-.versions_more .md-background 
+.versions_more .md-background
     background-color: $verylightgrey
 
-.icon 
+.icon
     margin-right: 10px
     max-width: 50px
     max-height: 50px
- 
+
 .plugin_header
     border-bottom: 1px dashed $lightgrey
     padding-bottom: 5px
@@ -111,10 +111,10 @@ nav
     min-height: 500px
 
 
-    h2 
+    h2
         text-transform: capitalize
     .author, .download
-        i 
+        i
             vertical-align: middle
         .downloads
             color: $white
@@ -134,18 +134,18 @@ nav
 
     .infos
         overflow: visible
-        ul 
+        ul
             padding: 0
             display: table
-            li 
+            li
                 margin-top: 8px
-                display: table-row     
+                display: table-row
                 label
                     display: table-cell
                     padding: 5px 10px 0 0
                     color: $grey
                     text-transform: uppercase
-                label + span 
+                label + span
                     display: table-cell
 rate-box
     margin-left: 5px
@@ -156,7 +156,7 @@ rate-box
             cursor: pointer
             color: $lightblue
 
-.container 
+.container
     div[layout=row]
         md-content:nth-child(2)
             background-color: $verylightgrey
@@ -171,14 +171,14 @@ rate-box
     margin-bottom: 30px
     .topic
         font-size: 2em
-        .md-subheader-inner 
+        .md-subheader-inner
             padding: 0
-        i 
+        i
             font-size: 0.7em
     .legend
         margin-bottom: 15px
         display: inline-block
-    md-list-item 
+    md-list-item
         margin-top: 1px
         min-height: inherit
         .md-button
@@ -220,3 +220,7 @@ rate-box
     line-height: 50px
     box-shadow: inset 0 6px 12px -8px $dark
     z-index: 1000
+    p
+        text-align: center
+        line-height: 16px
+        font-size: 16px
