--- a/frontend/app/views/plugin_list.html
+++ b/frontend/app/views/plugin_list.html
@@ -18,7 +18,7 @@
             <img class="icon" src="http://placehold.it/60x60">
 				<div class='plugin_name'>
                <h2 class="name">
-                  <a ui-sref="plugin({id: plugin.id})">{{plugin.name}}</a>
+                  <a ui-sref="plugin({id: plugin.id, key: plugin.key})">{{plugin.name}}</a>
                </h2>
 					<h4 class="author">by {{inlineAuthors(plugin.authors)}}</h4>
 				</div>
