adapted frontend and backend endpoint to work with new author table

--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -94,7 +94,7 @@
          <span class='legend'>With the most plugins</span>
          <md-list-item ng-repeat="author in authors">
             <md-button>
-               <h4>{{author.author}}</h4>
+               <h4>{{author.name}}</h4>
                <md-tooltip md-direction="right">
                   Contributed to {{author.plugin_count}} plugins
                </md-tooltip>
