--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -43,7 +43,7 @@
          </md-subheader>
          <span class='legend'>With the most unique installs</span>
          <md-list-item ng-repeat="plugin in popular">
-            <md-button ui-sref="plugin({id: plugin.id, key: plugin.name})">
+            <md-button ui-sref="plugin({key: plugin.key})">
                <h4>{{plugin.name}}</h4>
                <md-tooltip md-direction="right">
                   Downloaded {{plugin.downloaded}} times
