created an endpoint to see plugin lists from author
 + according work on the frontend

--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -93,7 +93,7 @@
          </md-subheader>
          <span class='legend'>With the most plugins</span>
          <md-list-item ng-repeat="author in authors">
-            <md-button>
+            <md-button ui-sref="author({id: author.id})">
                <h4>{{author.name}}</h4>
                <md-tooltip md-direction="right">
                   Contributed to {{author.plugin_count}} plugins
