small style adjustment for title of plugin list

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -196,6 +196,10 @@ rate-box
             color: $darkblue
             font-size: 1.2em
 
+.list-name
+    font-weight: bold
+    font-size: 24px
+
 .result
     margin: 0
     padding: 10px
