--- a/frontend/app/views/plugin_list.html
+++ b/frontend/app/views/plugin_list.html
@@ -1,7 +1,8 @@
 <div layout="column">
-    <div class="list-name" ng-show="listName">
-        <p ng-bind-html="listName | unsafe"></p>
-    </div>
+  <div class="list-name">
+      <p ng-show="author">Plugins <a ui-sref="author({id: author.id})">{{author.name}}</a> contributed to/worked on</p>
+      <p ng-show="tag">Plugins tagged with "<a ui-sref="tag({key: tag.key})">{{tag.tag}}</a>"</p>
+  </div>
 	<div ng-init="orderBy=['downloaded','note'];reverse=true" class="sort-filters" ng-show="results.length">
 		<p>
 		<span>Sort by :</span>
