--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -5,7 +5,7 @@
 
         <div class='plugin_name'>
             <h2>{{plugin.name}}</h2>
-            <h4 class="author">by {{inlineAuthors(plugin.authors)}}</h4>
+            <h4 class="inline-authors" inline-authors="plugin.authors"></h4>
         </div>
 
       <div class='pills'>
