did a quick author page

--- a/frontend/app/views/author.html
+++ b/frontend/app/views/author.html
@@ -1,1 +1,5 @@
-<p>This is the author view.</p>
+<div layout="column">
+	<h2>{{author.name}}</h2>
+
+	<a ui-sref="author_plugins({id: author.id})">Plugins</a>
+</div>
