Reset all default http headers
 + bit of styling in header legend

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -41,6 +41,8 @@ ul li
             display: inline-block
             vertical-align: bottom
             color: $red
+    .legend
+        padding-left: 16px
 
 nav
     padding-top: 50px
