using moment.js to display relative time

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -71,11 +71,11 @@
                 </li>
                 <li>
                     <label>Added</label>
-                    <span>2 years ago</span
+                    <span>{{fromNow(plugin.date_added)}}</span
                 </li>
                 <li>
                     <label>Updated</label>
-                    <span>5 minutes ago</span
+                    <span>{{fromNow(plugin.date_updated)}}</span
                 </li>
             </ul>
         </md-content>
