the langswither works

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -43,7 +43,8 @@ ul li
             vertical-align: bottom
             color: $red
     .legend
-        padding-left: 16px
+        width: 182px
+        text-align: center
 
 nav
     padding-top: 22px
