--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -56,14 +56,14 @@
    <md-content flex="33" flex-md="50" flex-sm="100">
       <md-list class="plugin-list">
          <md-subheader class='topic'>
-            Updated
+            {{'UPDATED'|translate}}
             <i class="fa fa-refresh green"></i>
          </md-subheader>
          <span class='legend'>{{'UPDATED_SUB'|translate}}</span>
          <md-list-item ng-repeat="plugin in updated">
             <md-button ui-sref="plugin({key: plugin.key})">
                <h4>{{plugin.name}}</h4>
-               <md-tooltip md-direction="right">Updated {{fromNow(plugin.date_updated)}}</md-tooltip>
+               <md-tooltip md-direction="right">{{'UPDATED'|translate}} {{fromNow(plugin.date_updated)}}</md-tooltip>
             </md-button>
          </md-list-item>
       </md-list>
