--- a/frontend/app/views/submit.html
+++ b/frontend/app/views/submit.html
@@ -1,7 +1,7 @@
 <form class="submit">
-   <h2>Submit your plugin!</h2>
+   <h2>{{'SUBMIT_YOUR_PLUGIN'|translate}}</h2>
    <span class="legend">
-      Please, provide the url describing your plugin.
+      {{'SUB_SUBMIT_YOUR_PLUGIN'|translate}}
    </span>
 
    <md-input-container class="urlbox picbox">
@@ -17,7 +17,7 @@
            on-expire="cbExpiration()"></div>
 
    <md-button class="md-raised md-primary submit-button" ng-click="submit()">
-      Submit
+      {{'SUBMIT'|translate}}
       <i class="fa fa-paper-plane"></i>
    </md-button>
 
