displaying number of votes in plugin page

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -21,6 +21,10 @@
 
       <rate-box flex current-note="plugin.note" already-rated="false" rate-method="ratePlugin"></rate-box>
 
+      <div flex>
+        ({{'ON'|translate}} {{plugin.n_votes}} votes)
+      </div>
+
       <span class='download'>
         <span class="downloads">
             <span class='pill bg_red'>
