--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -39,7 +39,7 @@
       </span>
     </div>
     <div layout="row" layout-wrap>
-        <md-content class='tabs' flex flex-sm="100">
+        <md-content class='tabs' flex="50" flex-sm="100">
             <md-tabs md-dynamic-height>
                 <md-tab ng-repeat="description in plugin.descriptions" label="{{description.lang}}">
                     <md-content class="md-padding description">
@@ -49,7 +49,7 @@
             </md-tabs>
         </md-content>
 
-      <div class='screenshots' flex flex-sm="100">
+      <div class='screenshots' flex="50" flex-sm="100">
          <!-- we need to implement a lightbox here -->
          <md-card class='screenshot' ng-repeat="screenshot in plugin.screenshots"><img ng-src="{{screenshot.url}}"></md-card>
       </div>
