added display of votes number in ratebox directive

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -19,11 +19,7 @@
          </span>
       </div>
 
-      <rate-box flex current-note="plugin.note" already-rated="false" rate-method="ratePlugin"></rate-box>
-
-      <div flex>
-        ({{'ON'|translate}} {{plugin.n_votes}} votes)
-      </div>
+      <rate-box flex current-note="plugin.note" already-rated="false" rate-method="ratePlugin" votes-number="plugin.n_votes"></rate-box>
 
       <span class='download'>
         <span class="downloads">
