styled a bit votes number

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -190,6 +190,10 @@ rate-box
         &.hover
             cursor: pointer
             color: $lightblue
+    votes
+        color: rgba(0,0,0,0.54)
+        font-size: 17px
+        margin-left: 6px
 
 .container
     div[layout=row]
