rate-box: now unable to vote twice

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -19,7 +19,7 @@
          </span>
       </div>
 
-      <rate-box flex current-note="plugin.note" already-rated="false" rate-method="ratePlugin" votes-number="plugin.n_votes"></rate-box>
+      <rate-box flex current-note="plugin.note" rate-method="ratePlugin" votes-number="plugin.n_votes" disable-rating="rated"></rate-box>
 
       <span class='download'>
         <span class="downloads">
