--- a/frontend/app/views/plugin_list.html
+++ b/frontend/app/views/plugin_list.html
@@ -39,7 +39,7 @@
            </span>
         </div>
 
-				<rate-box flex current-note="plugin.note" already-rated="true"></rate-box>
+				<rate-box flex current-note="plugin.note" disable-rating="true"></rate-box>
 
 			</div>
 			<div class="description">
