rework layout of plugin_list

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -110,6 +110,9 @@ nav
 .messagebox:after
     content: "\f0e5"
 
+.flex_right
+    margin-left: auto
+
 .pill
     border-radius: 5px
     padding: 2px 4px
@@ -127,12 +130,11 @@ nav
 .plugin_header
     border-bottom: 1px dashed $lightgrey
     padding-bottom: 5px
-.plugin_name
-    margin-right: 50px
 .plugin
     margin-top: 35px
     min-height: 500px
-
+    .plugin_name
+        margin-right: 50px
 
     h2
         text-transform: capitalize
