rework layout of plugin

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -126,6 +126,9 @@ nav
     margin-right: 10px
     max-width: 50px
     max-height: 50px
+@media (max-width: 599px)
+    .icon
+        margin-right: 0
 
 .plugin_header
     border-bottom: 1px dashed $lightgrey
@@ -135,6 +138,10 @@ nav
     min-height: 500px
     .plugin_name
         margin-right: 50px
+@media (max-width: 599px)
+    .plugin
+        .plugin_name
+            margin-right: 0
 
     h2
         text-transform: capitalize
