used two-binded angular-material select for languageswitcher

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -63,23 +63,9 @@ nav
         color: $black
 
 .lang-switcher
-    @include clearfix
-    text-align: center
-    ul
-        display: inline-block
-        margin: 0
+    md-select
         padding: 0
-    li
-        float: left
-        margin-right: 8px
-        &:last-child
-            margin-right: 0
-    span
-        font-size: 18px
-    button
-        min-height: 30px
-        line-height: 30px
-        min-width: 36px
+        margin-bottom: 20px
 
 .toggle_menu
     position: absolute
