--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -39,7 +39,7 @@
 
     <div layout="row" layout-wrap>
         <md-content class='tabs' flex="50" flex-sm="100">
-            <md-tabs md-dynamic-height>
+            <md-tabs md-dynamic-height md-selected="selectedIndex">
                 <md-tab ng-repeat="description in plugin.descriptions" label="{{description.lang}}">
                     <md-content class="md-padding description">
                         <p ng-bind-html="description.long_description | unsafe"></p>
