Making use of disable-rating in plugin.html

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -20,7 +20,7 @@
             </span>
          </div>
 
-         <rate-box current-note="plugin.note" already-rated="false" rate-method="ratePlugin" votes-number="plugin.n_votes"></rate-box>
+         <rate-box current-note="plugin.note" disable-rating="rated" rate-method="ratePlugin" votes-number="plugin.n_votes"></rate-box>
       </div>
 
       <span class='download flex_right'>
