download count and plugin version pills are always white

--- a/frontend/app/styles/plugin.sass
+++ b/frontend/app/styles/plugin.sass
@@ -6,6 +6,9 @@
     min-height: 500px
     .plugin_name
         margin-right: 50px
+    .downloads, .pills span
+        color: $white
+
 @media (max-width: 599px)
     .plugin
         .plugin_name
@@ -16,8 +19,6 @@
     .author, .download
         i
             vertical-align: middle
-        .downloads
-            color: $white
     .tabs
         background-color: inherit
         .description
