--- a/frontend/app/styles/sidenav.sass
+++ b/frontend/app/styles/sidenav.sass
@@ -4,7 +4,7 @@
     top: 0
 
 nav
-    padding-top: 22px
+    padding-top: 24px
     border-left: 1px solid $verylightgrey
     font-size: 16px
     a
@@ -21,5 +21,5 @@ nav
 
 .lang-switcher
     md-select
-        padding: 0
-        margin-bottom: 20px
+        padding: 0 20px
+        margin: 0 0 20px 0
