--- a/frontend/app/styles/plugin.sass
+++ b/frontend/app/styles/plugin.sass
@@ -1,22 +1,25 @@
-.plugin_header
-    border-bottom: 1px dashed $lightgrey
-    padding-bottom: 5px
-    height: 68px
-    .pills, rate-box
-        height: 100%
-        line-height: 68px
+
 
 .plugin
     margin-top: 35px
     min-height: 500px
+    .plugin_header
+        border-bottom: 1px dashed $lightgrey
+        padding-bottom: 5px
+        height: 68px
+        .pills, rate-box
+            height: 100%
+            line-height: 68px
     .plugin_name
         margin-right: 50px
         display: flex
         flex-direction: column
         justify-content: space-around
         height: 100%
-    .downloads, .pills span
+    .downloads span, .pills span
         color: $white
+    .pills span, .downloads span
+        cursor: default
     .download
         i
             line-height: 58px
