all pills text in white

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -59,6 +59,7 @@ ul li
     padding: 2px 4px
     margin-right: 5px
     cursor: pointer
+    color: $white
 
 .versions_more .md-background
     background-color: $verylightgrey
